# zapdel-now-playing

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  buildspec.json
.github/scripts/: Package-Windows.ps1
.github/workflows/: build-project.yaml
data/locale/: en-US.ini
data/themes/: np-core.js
data/themes/art-top/: style.css  theme.js  theme.json
data/themes/compact/: index.html  style.css  theme.js  theme.json
data/themes/default/: style.css  theme.js  theme.json
docs/: theme-authoring.md
src/: browser-bridge.cpp  browser-bridge.h  now-playing-source.cpp  now-playing-source.h  plugin-main.cpp  smtc-reader.cpp  smtc-reader.h
